--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,6 +31,12 @@
         <li class="nav-item">
           <a class="nav-link" href="demo.html">Demo</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="auspicios.html">Auspicios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="perfil.html">Perfil</a>
+    </li>
         <li class="nav-item">
           <a class="nav-link" href="contacto.html">Contacto</a>
         </li>
@@ -72,7 +79,6 @@
 
 
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
@@ -82,7 +88,7 @@
     <div class="container">
       <nav class="row">
         <a href="index.html" class="col-3 text-ippercase text-white d-flex align-items-center">
-          <img src="../imagen/logo2.png" alt="logowebfooter" class="logowebfooter p-2 m-2">
+          <img src="./imagen/logo2.png" alt="logowebfooter" class="logowebfooter p-2 m-2">
           <p>Alejandra Mora Locutora</p>
         </a>
       </nav>
