--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css"/>
-    
+    <link rel="stylesheet" href="./style/style.css" />
+
     <title>Alejandra Mora - Locutora</title>
 </head>
 
@@ -25,12 +25,23 @@
         <!--menu-->
         <nav>
             <ul class="nav nav-tabs justify-content-center">
+
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link active" href="demo.html">Demo</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" href="auspicios.html">Auspicios</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" href="perfil.html">Perfil</a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link active" href="contacto.html">Contacto</a>
                 </li>
@@ -81,20 +92,21 @@
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
 
+
+        <footer class="bg-dark">
+
+            <div class="container">
+                <nav class="row">
+                    <a href="index.html" class="col-3 text-ippercase text-white d-flex align-items-center">
+                        <img src="./imagen/logo2.png" alt="logowebfooter" class="logowebfooter p-2 m-2">
+                        <p>Alejandra Mora Locutora</p>
+                    </a>
+                </nav>
+            </div>
+
+
+        </footer>
+
     </body>
-
-    <footer class="bg-dark">
-
-        <div class="container">
-            <nav class="row">
-                <a href="index.html" class="col-3 text-ippercase text-white d-flex align-items-center">
-                    <img src="./imagen/logo2.png" alt="logowebfooter" class="logowebfooter p-2 m-2">
-                    <p>Alejandra Mora Locutora</p>
-                </a>
-            </nav>
-        </div>
-
-
-    </footer>
 
 </html>
